api-gateway/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-external
  namespace: gateway
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
